--- a/contact.html
+++ b/contact.html
@@ -54,9 +54,10 @@
 	  transition: all 0.3s;
 	  padding: 13px;
 	  margin-bottom: 15px;
-	  width:100%;
+	  width:80%;
 	  box-sizing: border-box;
 	  outline:0;
+	  margin-left:10%
 	}
 
 	.feedback:focus { 
