--- a/finance.html
+++ b/finance.html
@@ -25,6 +25,12 @@
 	.card{
 		border: none;
 		}
+	
+	@media only screen and (max-width: 600px) {
+	.card-img {
+		height:0;
+		}
+	}
 	</style>
 	
 	
