--- a/finance.html
+++ b/finance.html
@@ -25,12 +25,10 @@
 	.card{
 		border: none;
 		}
-	.card-img{
-		height:29%;
-		}
+	
 	@media only screen and (max-width: 600px) {
 	.card-img {
-		height:300px;
+		height:0;
 		}
 	}
 	</style>
