--- a/resume.html
+++ b/resume.html
@@ -39,6 +39,12 @@
 		padding-right:-5rem;
 		padding-left:0rem;
 		}
+	@media only screen and (max-width: 600px) {
+		*{
+			text-align:center;
+			padding-left:1%;
+			}
+	}
 	</style>
 	
 	
