--- a/resume.html
+++ b/resume.html
@@ -40,12 +40,9 @@
 		padding-left:0rem;
 		}
 	@media only screen and (max-width: 600px) {
-		*{
+		.card{
 			text-align:center;
 			padding-left:1%;
-			}
-		.navbar{
-			padding-left:0%;
 			}
 	}
 	</style>
