--- a/resume.html
+++ b/resume.html
@@ -44,6 +44,12 @@
 			text-align:center;
 			padding-left:1%;
 			}
+		.center{
+			margin-left:5%;
+			}
+		*{
+			text-align:center;
+			}
 	}
 	</style>
 	
@@ -125,21 +131,21 @@
 			<div class="card">
 			  <div class="card-body cardbody2">
 				<h1 class="card-title">Work History</h1></br>
-					<h3>The Cincinnati Insurance Company Company</h3></br>
+					<h3 class="center">The Cincinnati Insurance Company Company</h3></br>
 					<h4>Summer IT Intern</h4>
 					<p class="card-text">Details coming soon</p>
 					</br>
 					<h3>Bhutanese American Hindu Society</h3></br>
 					<h4>Volunteer & Tutor</h4>
-					<p>Assisted teachers with classroom management and document coordination to maintain positive learning environment.</p>
-					<p>Participated in meetings to discuss new educational and cultural events.</p>
-					<p>Planned and delivered numerous activities and special events.</p>
+					<p class="center">Assisted teachers with classroom management and document coordination to maintain positive learning environment.</p>
+					<p class="center">Participated in meetings to discuss new educational and cultural events.</p>
+					<p class="center">Planned and delivered numerous activities and special events.</p>
 					</br>
 					<h3>duPont Manual High School</h3></br>
 					<h4>Peer Tutor</h4>
-					<p>Collaborated with students to complete homework assignments and test preparations, identify lagging skills and correct weaknesses.</p>
-					<p>Developed student confidence though attentive instruction in STEM field, applying positive reinforcement strategies.</p>
-					<p>Supported teacher instruction by discussing concepts and creating custom practice questions.</p>
+					<p class="center">Collaborated with students to complete homework assignments and test preparations, identify lagging skills and correct weaknesses.</p>
+					<p class="center">Developed student confidence though attentive instruction in STEM field, applying positive reinforcement strategies.</p>
+					<p class="center">Supported teacher instruction by discussing concepts and creating custom practice questions.</p>
 			  </div>
 			</div>
 		</div>
